objects/Task_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Available_for_Resubmit__c</fullName>
        <formula>Task__r.Available_for_Resubmit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available for Resubmit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>is task completed</description>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Time_Completed__c</fullName>
        <description>task completed date</description>
        <label>Completed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>task due date</description>
        <formula>DATEVALUE( Substage_Mapping__r.Start_DateTime__c ) + Due_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Days__c</fullName>
        <description>task due days</description>
        <formula>Task__r.Due_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <description>Insite url for images for the Tasks.</description>
        <inlineHelpText>Please enter a valid URL address.</inlineHelpText>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Insite_Image__c</fullName>
        <description>imae for task</description>
        <formula>IMAGE( Image_URL__c ,  Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insite Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <description>owner of task</description>
        <label>Owner/Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Channel Manager</fullName>
                </value>
                <value>
                    <fullName>Executive Sponsor</fullName>
                </value>
                <value>
                    <fullName>Lead Qualifier</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales Consultant</fullName>
                </value>
                <value>
                    <fullName>Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Substage_Mapping__c</fullName>
        <description>associated sub stage and stage record</description>
        <label>Substage Mapping</label>
        <referenceTo>Substage_Mapping1__c</referenceTo>
        <relationshipLabel>sub stage mapping</relationshipLabel>
        <relationshipName>Task_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <description>task name</description>
        <formula>Task__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Sort_Order__c</fullName>
        <description>task sort order</description>
        <formula>Task__r.Task_Sort_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <description>task type</description>
        <formula>IF(ISPICKVAL( Task__r.Task_Type__c ,&quot;Best Practices&quot;),&quot;Best Practices&quot;,
   IF(ISPICKVAL( Task__r.Task_Type__c ,&quot;Other Applications&quot;),&quot;Other Applications&quot;,
      IF(ISPICKVAL( Task__r.Task_Type__c ,&quot;Tools, Templates, Forms&quot;),&quot;Tools, Templates, Forms&quot;,
          IF(ISPICKVAL( Task__r.Task_Type__c ,&quot;Scripting&quot;),&quot;Scripting&quot;,
            IF(ISPICKVAL( Task__r.Task_Type__c ,&quot;&quot;),&quot;&quot;,&quot;|Error|:Formula Field:Task Type:Add the new value&quot;
  )   )  )  )  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_URL__c</fullName>
        <description>task url</description>
        <formula>Task__r.Image_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>task</description>
        <label>Task</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>task</relationshipLabel>
        <relationshipName>Task_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trigger_After_Completion__c</fullName>
        <label>Trigger After Completion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Create a Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Action Mapping</label>
    <nameField>
        <label>Action</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>